# research-dashboard

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
articles/: linkedin.md
src/research_dashboard/: __init__.py  cli.py  layout.py
tests/: test_layout.py
