[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "research-dashboard"
version = "0.1.0"
description = "Tmux-based system monitoring dashboard for ML research workstations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Andrew H. Bond" }]
keywords = ["monitoring", "dashboard", "gpu", "tmux", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]

[project.scripts]
research-dashboard = "research_dashboard.cli:main"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
